<?xml version="1.0"?>
<package format="2">
  <name>gmsl_n_cameras</name>
  <version>1.0.0</version>
  <description>
    Wrapper for Nvidia Driveworks
  </description>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>libglew-dev</depend><!--TODO: Figure out what actually needs this library-->
  <depend>nodelet</depend>
  <export>
    <nodelet plugin="${prefix}/cv_connection_nodelet.xml" />
  </export>
  
  <maintainer email="NA@gmail.com">wei</maintainer>
  <license>BSD</license>

</package>
